--- a/.k8s/deployment.yaml
+++ b/.k8s/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: umperium-frontend
-          image: 729065055096.dkr.ecr.ap-northeast-2.amazonaws.com/umperium-frontend:1.1.21
+          image: cr.yandex/crprep7mlarphamjggv1/frontend/umperium-frontend:1.1.21
           imagePullPolicy: Always
           resources:
             limits:
