--- a/.k8s/deployment.yaml
+++ b/.k8s/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: umperium-frontend
+  name: umperium-game-frontend
   labels:
-    app: umperium-frontend
+    app: umperium-game-frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: umperium-frontend
+      app: umperium-game-frontend
   template:
     metadata:
-      name: umperium-frontend
+      name: umperium-game-frontend
       labels:
-        app: umperium-frontend
+        app: umperium-game-frontend
     spec:
       containers:
-        - name: umperium-frontend
+        - name: umperium-game-frontend
           image: cr.yandex/crprep7mlarphamjggv1/frontend/umperium-frontend:1.2.0
           imagePullPolicy: Always
           resources:
