--- a/.k8s/ingress.yaml
+++ b/.k8s/ingress.yaml
@@ -19,6 +19,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: umperium-frontend
+                name: umperium-game-frontend
                 port:
                   number: 80
