--- a/.k8s/service.yaml
+++ b/.k8s/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: umperium-frontend
+  name: umperium-game-frontend
 spec:
   selector:
-    app: umperium-frontend
+    app: umperium-game-frontend
   ports:
     - protocol: TCP
       port: 80
